[tool.poetry]
name = "lab"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.scripts]
labcli = "lab.__main__:cli"

[tool.poetry.dependencies]
python = "^3.11"
cdktf = "^0.20.7"
typer = "^0.12.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
ruff = "^0.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
